--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "array-shuffle": "^3.0.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
