feat: ET-IAC-7 update to deploy created image to AWS

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,7 +6,7 @@ on:
       - main # Trigger the workflow on pushes to the `main` branch
 
 jobs:
-  build-and-push:
+  build-and-push-docker-image:
     runs-on: ubuntu-latest
 
     permissions:
@@ -35,4 +35,45 @@ jobs:
       # Step 4: Push the Docker image to GitHub Container Registry
       - name: Push Docker Image
         run: |
-          docker push ghcr.io/${{ github.repository }}/quiz-app:latest  
+          docker push ghcr.io/${{ github.repository }}/quiz-app:latest
+  deploy-to-prod:
+    runs-on: ubuntu-latest
+    needs: build-and-push-docker-image
+
+    steps:
+      # Checkout the code repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      # Set up AWS credentials
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
+
+      # Deploy Infrastructure with Terraform
+      - name: Terraform Apply
+        id: terraform
+        run: |
+          cd terraform
+          terraform init
+          terraform apply -var "environment=production" -auto-approve
+
+      # Health Check Step
+      - name: Wait for Application to Become Available
+        id: healthcheck
+        run: |
+          echo "Waiting for application to become available..."
+          TIMEOUT=0
+          while ! curl -s http://${{ steps.terraform.outputs.public_ip }}:3000 > /dev/null; do
+            echo "App is not ready yet. Retrying in 10 seconds..."
+            sleep 10
+            TIMEOUT=$((TIMEOUT + 10))
+            if [ "$TIMEOUT" -ge 300 ]; then
+              echo "App failed to start within the timeout period."
+              exit 1
+            fi
+          done
+          echo "App is ready and accessible at http://${{ steps.terraform.outputs.public_ip }}:3000"
