--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -53,6 +53,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
+      # Set up Terraform
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0  # Use your preferred version    
+
       # Deploy Infrastructure with Terraform
       - name: Terraform Apply
         id: terraform
