--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -74,17 +74,15 @@ jobs:
       - name: Wait for Application to Become Available
         id: healthcheck
         run: |
-          echo "EC2 Public IP is '${{ env.EC2_INSTANCE_PUBLIC_IP }}'"
-        # run: |
-        #   echo "Waiting for application to become available..."
-        #   TIMEOUT=0
-        #   while ! curl -s http://${{ steps.terraform.outputs.ec2_instance_public_ip }}:3000 > /dev/null; do
-        #     echo "App is not ready yet. Retrying in 10 seconds..."
-        #     sleep 10
-        #     TIMEOUT=$((TIMEOUT + 10))
-        #     if [ "$TIMEOUT" -ge 120 ]; then
-        #       echo "App failed to start within the timeout period."
-        #       exit 1
-        #     fi
-        #   done
-        #   echo "App is ready and accessible at http://${{ steps.terraform.outputs.ec2_instance_public_ip }}:3000"
+          echo "Waiting for application to become available at http://${{ env.EC2_INSTANCE_PUBLIC_IP }}:3000"
+          TIMEOUT=0
+          while ! curl -s http://${{ env.EC2_INSTANCE_PUBLIC_IP }}:3000 > /dev/null; do
+            echo "App is not ready yet. Retrying in 10 seconds..."
+            sleep 10
+            TIMEOUT=$((TIMEOUT + 10))
+            if [ "$TIMEOUT" -ge 120 ]; then
+              echo "App failed to start within the timeout period."
+              exit 1
+            fi
+          done
+          echo "App is ready and accessible at http://${{ env.EC2_INSTANCE_PUBLIC_IP }}:3000"
